# TwoBodies

./: CMakeLists.txt
include/: constants.hpp  simulation.hpp
include/algorithms/: algorithmBase.hpp  eulerAlgorithm.hpp
include/physics/: body.hpp  vector2D.hpp
src/: algorithmBase.cpp  body.cpp  eulerAlgorithm.cpp  main.cpp  simulation.cpp  vector2D.cpp
